@@ -9,6 +9,7 @@
     task manager absolute height #380
     fix icon/compact dbl-click selects file in selected dir #218 #389
     fix open foldername.iso as automount iso
+    allow ~/ prefix in bookmarks and hacked session files
 0.9.1   2013-11-06:
     [gtk 3.8] fix run dialog reverts to minimum size
     fix icon change not saved (bookmark, tab, devices, etc) #367
